# RobotCode2024

./: .gitignore  Cargo.toml  Makefile  andydoohickeydetection.py  deploy.sh  rust-toolchain.toml
.cargo/: config
client/: selector.html
javastub/: .gitignore  build.gradle  paths.chor
javastub/.wpilib/: wpilib_preferences.json
javastub/src/main/java/frc/robot/: Main.java  Robot.java  Wrapper.java
opencv/: NoteDetectColor.py  allldetection.py  bestiedetection.py  oppdetection.py  robotdetection.py  tester.py
src/: constants.rs  container.rs  lib.rs  main.rs  telemetry.rs
src/auto/: mod.rs  path.rs
src/input/: climber.rs  drivetrain.rs  intake.rs  mod.rs  shooter.rs
src/subsystems/: climber.rs  drivetrain.rs  intake.rs  mod.rs  shooter.rs
src/swerve/: kinematics.rs  mod.rs  odometry.rs
talon-board/: package-lock.json  package.json  run.sh
talon-board/app/: layout.tsx  page.tsx  providers.tsx
talon-board/testing-server/: Cargo.toml
talon-board/testing-server/src/: main.rs
