workspace = { members = ["talon-board/testing-server"] }
[package]
name = "RobotCode2024"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
j4rs_derive = "0.1.0"
j4rs = "0.12.0"
uom = { version = "0.35.0", features = ["f64"] }
nalgebra = "0.32.3"
futures-lite = "2.2.0"
tokio = { version = "1.36.0", features = ["rt", "full"] }
serde_json = "1.0.113"
serde = { version = "1.0.196", features = ["derive"] }
lazy_static = "1.4.0"
send_wrapper = "0.6.0"
once_cell = "1.19.0"
num-traits = "0.2.18"
num-derive = "0.4.2"
wpi-trajectory = { git = "https://github.com/Speedy6451/trajectory-rs" }
axum = "0.7.4"
mime_guess = "2.0.4"
include_dir = "0.7.3"

[dependencies.frcrs]
#git = "https://www.github.com/Team-2502/frcrs.git"
#branch = "comp"
path = "../frcrs"
